--- a/MauiApp1/wwwroot/index.html
+++ b/MauiApp1/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="MauiApp1.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 
 <body>
